# ops-medic

./: README.md  lambda_function.py  main.tf  pyproject.toml  server.py
.github/workflows/: failing-workflow.yml
terraform/: .terraform.lock.hcl  api_gateway.tf  iam.tf  lambda.tf  lambda_layer.tf  main.tf
