[tool.poetry]
name = "ops-medic"
version = "0.1.0"
description = ""
authors = ["Aaryan Shroff <aaryan.shroff@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
flask = "^3.0.3"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
